--- a/css/styles.css
+++ b/css/styles.css
@@ -67,33 +67,25 @@ a:hover{
 }
 
 .btn {
-  background: #820000;
-  background-image: -webkit-linear-gradient(top, #820000, #b50000);
-  background-image: -moz-linear-gradient(top, #820000, #b50000);
-  background-image: -ms-linear-gradient(top, #820000, #b50000);
-  background-image: -o-linear-gradient(top, #820000, #b50000);
-  background-image: linear-gradient(to bottom, #820000, #b50000);
+  background: #d93434;
+  background-image: -webkit-linear-gradient(top, #d93434, #b82b2b);
+  background-image: -moz-linear-gradient(top, #d93434, #b82b2b);
+  background-image: -ms-linear-gradient(top, #d93434, #b82b2b);
+  background-image: -o-linear-gradient(top, #d93434, #b82b2b);
+  background-image: linear-gradient(to bottom, #d93434, #b82b2b);
   -webkit-border-radius: 28;
   -moz-border-radius: 28;
   border-radius: 28px;
-  -webkit-box-shadow: 0px 1px 3px #666666;
-   -moz-box-shadow: 0px 1px 3px #666666;
-  box-shadow: 0px 1px 3px #666666; 
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: #f2deba;
+  font-family: Arial;
+  color: #FAECD6;
   font-size: 20px;
-  padding: 10px 20px 10px 20px;
+  padding: 10px 35px 10px 35px;
   text-decoration: none;
 }
 
 .btn:hover {
-  background: #9e0000;
-  background-image: -webkit-linear-gradient(top, #9e0000, #bf0000);
-  background-image: -moz-linear-gradient(top, #9e0000, #bf0000);
-  background-image: -ms-linear-gradient(top, #9e0000, #bf0000);
-  background-image: -o-linear-gradient(top, #9e0000, #bf0000);
-  background-image: linear-gradient(to bottom, #9e0000, #bf0000);
-  text-decoration: none;
+  background: #b50000;
+  color: #FAECD6;
 }
 .bottom-container{
   background-color: #f2deba;
